--- a/index.html
+++ b/index.html
@@ -1,28 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-  Improve your front-end skills by building projects
+    <style>
+      * {
+        font-family: "Outfit", sans-serif;
+        text-align: center;
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+      }
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      body {
+        background-color: hsl(212, 45%, 89%);
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .card {
+        width: 326px;
+        min-width: 326px;
+        background-color: hsl(0, 0%, 100%);
+        padding: 1rem;
+        border-radius: 1.2rem;
+      }
+
+      .card img {
+        width: 100%;
+        border-radius: 0.5rem;
+      }
+
+      .card h1 {
+        font-size: 1.4rem;
+        font-weight: 700;
+        color: hsl(218, 44%, 22%);
+        margin: 1rem 0;
+      }
+
+      .card p {
+        padding: 0 1rem;
+        margin: 1rem 0;
+        color: hsl(220, 15%, 55%);
+        font-weight: 400;
+        font-size: 15px;
+      }
+    </style>
+
+    <title>Frontend Mentor | QR code component</title>
+  </head>
+  <body>
+    <div class="card">
+      <img src="images/image-qr-code.png" alt="qr code" />
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
+      </p>
+    </div>
+  </body>
 </html>
